--- a/tema5/Blaj Marius, Lipan Radu Matei A1 - The Boyz.tex
+++ b/tema5/Blaj Marius, Lipan Radu Matei A1 - The Boyz.tex
@@ -61,7 +61,12 @@ Totodata, ne-am folosit si de trigger-urile puse la dispozitie de Firebase Realt
 
 \section{Diagrame Use-Case}
 
-\section{Documentatia API-ului}
+\begin{figure}[ht]
+\centering
+\includegraphics[width=1\textwidth]{img/use-case.png}
+\caption{Arhitectura actuala a aplicatiei The Boyz} 
+\label{fig:architecture}
+\end{figure}
 
 \begin{thebibliography}{9}
 
